[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/dialogue_box.gd" id="1"]

[node name="DialogueBoxScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.121569, 0.121569, 0.14902, 1)

[node name="CharacterPlaceholder" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 70.0
offset_top = 100.0
offset_right = 420.0
offset_bottom = 620.0
color = Color(0.278431, 0.333333, 0.458824, 1)

[node name="DialoguePanel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 40.0
offset_top = 460.0
offset_right = 1240.0
offset_bottom = 700.0

[node name="VBox" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
text = ""

[node name="ChoiceContainer" type="VBoxContainer" parent="DialoguePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6

[node name="AdvanceButton" type="Button" parent="DialoguePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "次へ"

[node name="TypingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.03
one_shot = false

